Many version bumps and code changes to make it work.